--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,11 @@
 #playlist-embed {
     position: fixed;
     padding: 1px 4px;
-    border: 1px solid;
+}
+
+:root:not(.fourchan-x) #playlist-embed {
+    border-width: 1px;
+    border-style: solid;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .15)
 }
 
